# notepad

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
src/: .editorconfig  CMakeLists.txt  app.cpp  app.h  main.cpp  notepad.cpp  notepad.h
src/display/: CMakeLists.txt  cli_display.cpp  cli_display.h  display_interface.h
